重构六门语言 ph10 为四层交付物并补齐内容缺口
按 tenetlang-notes skill 场景 B 将 ph10 升级为四层完整交付物，
ph08/ph09 审计教训全部落地（sol 验证块/片段一致性/实测数字/产物纪律）：

- c/ph10-ub：6 示例（UB 演示均带运行前提）+ 5 题 + 常见坑示例库；
  UBSan/ASan 实测报告，修正旧文档 6 处与实测相反的主张
- cpp/ph10-build-toolchain：6 主题 + 5 题 + C++ 工程模板；
  静态库按需抽取/dyld/CMake/gcov 实测
- go/ph10-database：6 module + 4 题 + 车辆轨迹存储服务；
  modernc.org/sqlite 经 goproxy.cn 全量实测，覆盖率实测回填
- java/ph10-jvm：6 示例 + 4 题 + 内存泄漏实验台；
  javap/GC 日志/JIT/逃逸/JMM 全实测，修复旧文档编译 bug
- py/ph10-web-backend：6 示例 + 4 题 + 设备上报 API；
  全部离线 TestClient 实测，依赖全装
- rs/ph10-smart-pointers：6 示例 + 5 题 + 规则树执行器；
  错误码 7 个全实测（修正 E0509 误标），计数/Drop 顺序/panic 消息实测

场景 D 验收：导航链 ph09→ph10→ph11 全通、roadmap 对齐、格式复查全过、
产物清理干净；记录落盘 .workbuddy/memory/2026-08-31.md